# API-Kanban

./: .gitignore  Dockerfile  Dockerfile.url  README.md  api-kanban.url  commit  compose.yaml  fly.toml  nota.txt  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app-html.py  app-json.py  app.py  schemas.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/versions/: 1562b3de3840_create_todos_table.py  ae484d5c3f78_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_users.py  tst_app-html.py  tst_app-json.py
